[project]
name = "comfyui-diffusionlight"
description = ""
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-DiffusionLight"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-DiffusionLight"
Icon = ""
