[project]
name = "comfyui-diffusionlight"
description = "This is simplified implementation of the [a/DiffusionLight](https://github.com/DiffusionLight/DiffusionLight) method of creating light probes. You will need the included LoRA, place it in ComfyUI/loras folder like usual, it's converted from the original diffusers one."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-DiffusionLight"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-DiffusionLight"
Icon = ""
